# coop

./: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release.yml  rust.yml
assets/themes/: aurora.json  catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json  flexoki.json  forest.json  ocean.json  rose-pine-dawn.json  rose-pine-moon.json  rose-pine.json
crates/auto_update/: Cargo.toml
crates/auto_update/src/: lib.rs
crates/chat/src/: lib.rs  message.rs  room.rs
crates/chat_ui/: Cargo.toml
crates/chat_ui/src/: actions.rs  lib.rs  text.rs
crates/common/: Cargo.toml
crates/common/src/: display.rs  event.rs  lib.rs  nip96.rs  parser.rs  paths.rs  range.rs
crates/coop/: Cargo.toml
crates/coop/src/: actions.rs  main.rs  workspace.rs
crates/coop/src/dialogs/: accounts.rs  connect.rs  import.rs  mod.rs  restore.rs  screening.rs  settings.rs
crates/coop/src/new_identity/: mod.rs
crates/coop/src/panels/: backup.rs  connect.rs  contact_list.rs  encryption_key.rs  greeter.rs  import.rs  messaging_relays.rs  mod.rs  profile.rs  relay_list.rs  trash.rs
crates/coop/src/sidebar/: entry.rs  list_item.rs  mod.rs
crates/coop/src/user/: mod.rs
crates/coop/src/views/: preferences.rs  screening.rs
crates/coop_mobile/: Cargo.toml
crates/coop_web/: Cargo.toml
crates/coop_web/src/: lib.rs
crates/coop_web/src/www/: index.html
crates/device/: Cargo.toml
crates/device/src/: lib.rs
crates/person/: Cargo.toml
crates/person/src/: lib.rs  person.rs
crates/relay_auth/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: blossom.rs  constants.rs  device.rs  gossip.rs  lib.rs  nip05.rs  nip96.rs  signer.rs
crates/theme/src/: colors.rs  geometry.rs  lib.rs  notification.rs  theme.rs
crates/title_bar/src/: lib.rs
crates/ui/src/: anchored.rs  avatar.rs  button.rs  checkbox.rs  divider.rs  element_ext.rs  geometry.rs  group_box.rs  icon.rs  index_path.rs  lib.rs  modal.rs  notification.rs  popover.rs  root.rs  skeleton.rs  styled.rs  switch.rs  tooltip.rs  window_ext.rs
crates/ui/src/dock/: dock.rs  mod.rs  panel.rs  stack_panel.rs  tab_panel.rs
crates/ui/src/dock_area/: dock.rs  mod.rs  panel.rs  stack_panel.rs  tab_panel.rs
crates/ui/src/input/: blink_cursor.rs  element.rs  mask_pattern.rs  state.rs  text_input.rs
crates/ui/src/list/: cache.rs  delegate.rs  list.rs  list_item.rs  loading.rs  mod.rs  separator_item.rs
crates/ui/src/menu/: app_menu_bar.rs  context_menu.rs  dropdown_menu.rs  menu_item.rs  popup_menu.rs
crates/ui/src/resizable/: mod.rs  panel.rs  resize_handle.rs
crates/ui/src/scroll/: scrollable.rs  scrollable_mask.rs  scrollbar.rs
crates/ui/src/tab/: mod.rs  tab_bar.rs
flathub/: .gitignore  README.md
script/: prepare-flathub  release
