[package]
name = "chat_ui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
state = { path = "../state" }
ui = { path = "../ui" }
theme = { path = "../theme" }
common = { path = "../common" }
person = { path = "../person" }
chat = { path = "../chat" }
settings = { path = "../settings" }

gpui.workspace = true
gpui_tokio.workspace = true

nostr-sdk.workspace = true
anyhow.workspace = true
itertools.workspace = true
smallvec.workspace = true
smol.workspace = true
flume.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

once_cell = "1.19.0"
regex = "1"
