[package]
name = "coop_mobile"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
assets = { path = "../assets" }
ui = { path = "../ui" }
theme = { path = "../theme" }
common = { path = "../common" }
state = { path = "../state" }
device = { path = "../device" }
chat = { path = "../chat" }
settings = { path = "../settings" }
person = { path = "../person" }
relay_auth = { path = "../relay_auth" }

gpui.workspace = true
gpui_platform.workspace = true
gpui_tokio.workspace = true
gpui-mobile = { git = "https://github.com/itsbalamurali/gpui-mobile" }

nostr-connect.workspace = true
nostr-sdk.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
log.workspace = true
smallvec.workspace = true
smol.workspace = true
futures.workspace = true
oneshot.workspace = true
tracing-subscriber.workspace = true
