[package]
name = "coop_web"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
assets = { path = "../assets" }
ui = { path = "../ui" }
theme = { path = "../theme" }
common = { path = "../common" }
state = { path = "../state" }
device = { path = "../device" }
chat = { path = "../chat" }
chat_ui = { path = "../chat_ui" }
settings = { path = "../settings" }
person = { path = "../person" }
relay_auth = { path = "../relay_auth" }

gpui.workspace = true
gpui_web.workspace = true
gpui_platform.workspace = true
gpui_tokio.workspace = true

nostr-connect.workspace = true
nostr-sdk.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
log.workspace = true
smallvec.workspace = true
smol.workspace = true
futures.workspace = true
oneshot.workspace = true
webbrowser.workspace = true

tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
console_log = "1.0"
wasm-bindgen = "0.2"
